# FizzleOpenGLFramework

./: CMakeLists.txt  Makefile
.cache/clangd/index/: Component.h.BB99C60A38081D2D.idx  Entity.h.8EB335D2879B6F67.idx  Event.h.04224CE09E11CCA0.idx  EventSystem.h.621427F4625AA064.idx  GameState.h.CDC7FC0057E07A56.idx  GameStateManager.cpp.D41C465729FDAF40.idx  GameStateManager.h.5002267FD60167D8.idx  Renderer.cpp.85AA995BE18E0E48.idx  Renderer.h.7DBBEEA6AD7D726B.idx  Scene.cpp.297EF160D6F9D091.idx  Scene.h.70B113FA051F066C.idx  SceneChangedEvent.h.8EE2D6DF8E852FBD.idx  SceneManager.cpp.1A20C4B3F0CBFE02.idx  SceneManager.h.3396E0C4D5D3D6DC.idx  SimpleGameState.cpp.E7A25CAD474C81F8.idx  SimpleGameState.h.1299DE84D8AF6B96.idx  SimpleScene.cpp.DAEE067609EF8C7B.idx  SimpleScene.h.3B4FDD70DFDFFB99.idx  SpriteComponent.cpp.A5096EDDA13AC268.idx  SpriteComponent.h.E19F422D4EFF51CE.idx  Texture.cpp.E4E3E3D407F98C66.idx  Texture.h.D26CB04BF5C5C1DE.idx  TransformComponent.h.04FBD68FCEF8625E.idx  Window.cpp.E46ECD46CFB39B44.idx  Window.h.BADEE1EE5A7ED62C.idx  World.cpp.9CDBCB348479ACF9.idx  World.h.616D377C1735B68E.idx  main.cpp.7935203F6B543E5C.idx
include/FizzleFramework/Core/: EventSystem.h  Renderer.h  SceneChangedEvent.h
include/FizzleFramework/ECS/: System.h
include/FizzleFramework/Scenes/: SimpleGameState.h  SimpleScene.h
src/: main.cpp
src/Core/: Event.h  EventSystem.h  Renderer.cpp  Renderer.h  SceneChangedEvent.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/ECS/: Entity.h  SpriteComponent.cpp  SpriteComponent.h  System.h  TransformComponent.h  World.cpp  World.h
src/Scenes/: GameState.h  GameStateManager.cpp  GameStateManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SimpleGameState.cpp  SimpleGameState.h  SimpleScene.cpp  SimpleScene.h
